fixed issues related to dark mode

--- a/triverse/src/index.css
+++ b/triverse/src/index.css
@@ -80,12 +80,12 @@ src: url('C:\Users\hp\triverse-ieee\triverse-ieee-bu\triverse\biorhyme\biorhyme\
   right: -100%;
   position: absolute;
   background: rgb(91, 90, 90);
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(6px);
   border-radius: 15px;
   color: #fff;
   padding:30px;
   transition-duration: 19ms;
-  opacity: 0.8;
+  opacity: 0.85;
 }
 
 .card-title{
